# fastapi-devbox-boilerplate

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  build.sh  devbox.json  env.ai.template  notes.txt  pyproject.toml
app/: main.py
app/api/v1/endpoints/: ai.py
app/core/: ai_config.py  config.py  database.py
app/core/prompts/: __init__.py  templates.py
app/models/: base.py  user.py
app/services/ai/: __init__.py  factory.py  video_processor.py
app/services/ai/llm/: __init__.py
app/services/ai/llm/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
app/services/monitoring/: __init__.py  usage_tracker.py
docs/: DETAILED_AI_GUIDE.md  IMPLEMENTATION.md  SETUP_CHECKLIST.md
examples/: README_VIDEO_DETECTION.md  VIDEO_PROCESSING_CHEATSHEET.md  cost_optimization_examples.py  prompt_engineering_examples.py  test_ollama.py  train_custom_yolo_example.py  video_detection_example.py
migrations/: env.py
migrations/versions/: 4ce2aa9cd6ea_initial_migration.py
