[project]
name = "apiboilerplate"
version = "0.1.0"
description = "API Boilerplate"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
# Option 1: Create a file named README.md in your root
# Option 2: Comment out/remove this line if you don't have one yet
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]",            # Added FastAPI (with standard extras)
    "uvicorn",                 # Added the server
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",       # Added SQLAlchemy specifically
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]

[tool.poetry]
# This is the "Magic Switch" to stop the README/packaging errors
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"