[project]
name = "apiboilerplate"
version = "0.1.0"
description = "API Boilerplate with AI/ML Capabilities"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # === Core Framework ===
    "fastapi[all]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # === Database ===
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "pgvector>=0.2.4",

    # === Configuration & Environment ===
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",

    # === Security ===
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0",

    # === LLM Providers (Interchangeable) ===
    "langchain>=0.1.20",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.0.8",
    "langchain-anthropic>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "litellm>=1.35.0",              # Universal LLM proxy (OpenAI/Claude/etc)

    # === Local LLM Support ===
    "ollama>=0.1.0",                # For local models
    "langchain-ollama>=0.0.1",

    # === Embeddings & Vector Search ===
    "sentence-transformers>=2.7.0", # Local embeddings (no API cost)
    "chromadb>=0.4.24",             # Alternative to pgvector (optional)

    # === Computer Vision ===
    "ultralytics>=8.2.0",           # YOLO (v8, v9, v10)
    "opencv-python-headless>=4.9.0",# Headless for server deployment
    "pillow>=10.3.0",
    "torch>=2.3.0",                 # For YOLO GPU support
    "torchvision>=0.18.0",

    # === Task Queue & Workers ===
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.0.0",
    "flower>=2.0.0",                # Celery monitoring UI

    # === Caching ===
    "aiocache>=0.12.0",
    "msgpack>=1.0.0",               # Fast serialization

    # === HTTP & Async ===
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",

    # === Resilience & Reliability ===
    "tenacity>=8.3.0",              # Retry logic
    "circuitbreaker>=2.0.0",

    # === Observability ===
    "langsmith>=0.1.0",             # LangChain tracing
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
